Changes for 1.3.1:

 - fixed screens displaying (Eugene)
 - fixed updating of hosts (Eugene)
 - removed bulkloader (Eugene)
 - improved editing of graphs (Eugene)
 - support of "-n" flag for ZABBIX server: change Node ID (Alexei)
 - fixed configuration file creation and reading (Eugene)
 - removed database creation from installation scriop (Eugene)
 - fixed multiple mutex system (Eugene)
 - added support of SQLite3 database (Eugene)
 - added transactional approach to ZABBIX server (Alexei)
 - new definition of parameter StartTrappers (Alexei)
 - new definition of parameter StartPollers (Alexei)
 - new parameter StartPingers for server (Alexei)
 - new parameter StartPollersUnreachable for server (Alexei)
 - developed "Import/Export" system for ZABBIX configurations (Eugene)
 - added "Host group" element to maps (Eugene)
 - fixed support of PostgreSQL (Eugene)
 - improved error displaying (Eugene)
 - improved support of strict PHP5 settings (Eugene)

Changes for 1.3:

 - developed frontend installation wizard (Eugene)
 - added availability of template triggers changing directly on host (Eugene)
 - added availability of template items changing directly on host (Eugene)
 - developed multitemplate system (Eugene)
 - developed group permission system (Eugene)
 - added processing of distributed events (Alexei)
 - restructured code to add function process_event() (Alexei)
 - table ALARMS renamed to EVENTS (Alexei)
 - added automatic generation of database schemas (Alexei)
 - pinger will use unique temporary file name (Alexei)
 - developed SLA calculation periods (Eugene)
 - developed flexible update intervals for items (Eugene)

Integrated from 1.1.x

1.1.5

 - fixed some compilation warnings (Alexei)
 - fixed "not equal" condition for hosts and host groups in actions (Alexei)
 - added support of macro TRIGGER.URL and TRIGGER.COMMENT (Alexei)

1.1.4

 - fixed Y asix value displaying for graphs (Eugene)
 - fixed warning displaying (Eugene)