@@ -1,5 +1,6 @@
 Changes for 1.3.1:
 
+ - added availability of multiple user groups selection (Eugene)
  - fixed screens displaying (Eugene)
  - fixed updating of hosts (Eugene)
  - removed bulkloader (Eugene)
